# amazon-translate-simple-mock

./: .gitignore  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  compose.yml  docker-compose.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
app/: definitions.py  errors.py  init.py  main.py  types.py
app/translators/: en.py  ja.py
tests/: conftest.py
tests/api/: test_content_type.py  test_language_pairs.py  test_magic_commands.py  test_translate_document.py  test_translate_text.py  test_validation.py
tests/unit/: test_definitions.py  test_errors.py  test_types.py
tests/unit/translators/: test_en.py  test_ja.py
