[tool.poetry]
name = "app"
version = "0.2.7"
description = ""
authors = ["dash14 <dash14.ack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
uvicorn = "^0.32.1"
pykakasi = "^2.3.0"
pyokaka = "^1.0.0"
python-multipart = "^0.0.19"
inflection = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
