[project]
name = "app"
version = "0.2.7"
description = ""
authors = [{name = "dash14", email = "dash14.ack@gmail.com"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic>=2.10.3",
    "uvicorn>=0.32.1",
    "pykakasi>=2.3.0",
    "pyokaka>=1.0.0",
    "python-multipart>=0.0.19",
    "inflection>=0.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
]

[tool.uv]
exclude-newer = "14d"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
